# sBootKit

./: .gitmodules  README.md  mydump.hex  sFSL.pem  sFSL2.pem  sLDR.pem  sUPD.pem  signkey.pem  signkey_extra.pem  zephyr_moved.hex  zephyr_moved_encrypted.hex  zephyr_moved_signed.hex  zephyr_moved_signed_encrypted.hex  zephyr_signed.hex  zephyr_signed_encrypted.hex  zephyr_ssl_signed.hex
FSL/src/: main.c
FSL/zephyr/: app.overlay  prj.conf
FSL/zephyr/boards/: nrf52dk_nrf52832.overlay  nucleo_f411re.overlay
SBKshell/zephyr/: CMakeLists.txt  prj.conf
SBKshell/zephyr/boards/: nrf52dk_nrf52832.overlay  nucleo_f411re.overlay
SBKshell/zephyr/include/: private_key.h
SBKshell/zephyr/src/: main.c
SSL/src/: main.c
SSL/zephyr/: app.overlay  prj.conf
SSL/zephyr/boards/: nrf51dk_nrf51422.overlay
docs/: sbktool.md
ext/mincrypt/include/mincrypt/: crypto_chacha20poly1305.h  crypto_sha256.h
ext/mincrypt/src/: crypto_chacha20poly1305.c  crypto_sha256.c
ext/mincrypt/test/include/mincrypt_test/: crypto_chacha20poly1305_tvectors.h  crypto_sha256_tvectors.h
ext/mincrypt/test/src/: crypto_chacha20poly1305_tvectors.c  crypto_sha256_tvectors.c
ext/mincrypt/test/zephyr/: CMakeLists.txt  prj.conf
ext/mincrypt/test/zephyr/src/: main.c
ext/mincrypt/zephyr/: CMakeLists.txt  Kconfig  module.yml
ext/p256-m/: README.md
hello_world/: image.hex  prj.conf  test.hex
hello_world/boards/: nrf52dk_nrf52832.conf  nucleo_f411re.overlay
hello_world/src/: main.c
hello_world/zephyr/: app.overlay  prj.conf
hello_world/zephyr/boards/: nrf51dk_nrf51422.overlay  nrf52dk_nrf52832.overlay  nucleo_f411re.overlay
lib/include/sbk/: sbk_board.h  sbk_boot.h  sbk_crypto.h  sbk_device.h  sbk_image.h  sbk_keys.h  sbk_log.h  sbk_manifest.h  sbk_move.h  sbk_os.h  sbk_product.h  sbk_sfsl.h  sbk_shell.h  sbk_slot.h  sbk_tlv.h  sbk_tlv_manifest.h  sbk_util.h
lib/src/: sbk_board.c  sbk_boot.c  sbk_crypto.c  sbk_image.c  sbk_keys.c  sbk_manifest.c  sbk_move.c  sbk_os.c  sbk_prep.c  sbk_product.c  sbk_sfsl.c  sbk_shell.c  sbk_slot.c  sbk_tlv.c  sbk_tlv_manifest.c  sbk_util.c
os/zephyr/: CMakeLists.txt  Kconfig  prj.conf
os/zephyr/src/: main.c
sFSL/: test.pem
sFSL/src/: main.c
sFSL/zephyr/: CMakeLists.txt  Kconfig  app.overlay  prj.conf
sFSL/zephyr/boards/: nrf51dk_nrf51422.overlay  nrf52dk_nrf52832.overlay  nucleo_f411re.overlay
sFSL/zephyr/include/: private_key.h
sFSL/zephyr/src/: CMakeLists.txt  arm_jump.c  main.c  prj.conf
sFSL/zephyr/src/boards/: nrf51dk_nrf51422.overlay  nucleo_f411re.overlay
sLDR/src/: main.c
sLDR/zephyr/: CMakeLists.txt  app.overlay  prj.conf
sLDR/zephyr/boards/: nrf51dk_nrf51422.overlay  nrf52dk_nrf52832.overlay  nucleo_f411re.overlay
sLDRshell/: image.hex
sLDRshell/zephyr/: CMakeLists.txt  iterables.ld  prj.conf
sLDRshell/zephyr/boards/: nrf51dk_nrf51422.overlay  nucleo_f411re.overlay
sLDRshell/zephyr/src/: ldrshell.c  main.c  tshell.c  tshell.h  uart_handle.c  uart_handle.h
sSWPshell/zephyr/: CMakeLists.txt  prj.conf
sSWPshell/zephyr/boards/: nrf51dk_nrf51422.overlay  nucleo_f411re.overlay
sSWPshell/zephyr/src/: main.c
sUPDshell/zephyr/: CMakeLists.txt  prj.conf
sUPDshell/zephyr/boards/: nrf51dk_nrf51422.overlay  nrf52dk_nrf52832.overlay
sUPDshell/zephyr/src/: main.c
scripts/: requirements.txt  sbktool.py  setup.py
scripts/sbktool/: image.py  main.py  upload.py  version.py  zeros.hex
scripts/sbktool/keys/: __init__.py  general.py  pk.py
scripts/sbktool/sbktcrypto/: __init__.py  sbktcrypto.py
tests/zephyr/: CMakeLists.txt  Kconfig  prj.conf
tests/zephyr/src/: main.c  test_sbk_crypto.c  test_sbk_image.c  test_sbk_os.c  test_sbk_tlv.c  testimage0.h  testkeys.c  testvars.c
tmp/: test.py
zephyr/: CMakeLists.txt  Kconfig  module.yml  zephyr_os.c  zephyr_os.h  zephyr_os_arm.c  zephyr_os_config.h  zephyr_os_qemu.c  zephyr_util.h
